# csgo_demo_pipeline

./: .gitignore  docker-compose.yaml  docker-compose.yml
dagster_workflow/: Dockerfile  README.md  requirements.txt
dagster_workflow/demo-pipeline/: pyproject.toml  setup.py  start_dev.sh
dagster_workflow/demo-pipeline/demo_pipeline/: __init__.py  assets.py
dagster_workflow/demo-pipeline/demo_pipeline/assets/: __init__.py
dagster_workflow/demo-pipeline/demo_pipeline/assets/core/: assets.py
dagster_workflow/demo-pipeline/demo_pipeline/assets/demo_collection/: assets.py  demo_info.py
dagster_workflow/demo-pipeline/demo_pipeline/assets/load_demo/: assets.py  spark_to_db.py
dagster_workflow/demo-pipeline/demo_pipeline/functions/: dl_unzip.py  process_demo.py  scrape_match.py
dagster_workflow/demo-pipeline/demo_pipeline/functions/demo_parse/: go.mod  main.go
dagster_workflow/demo-pipeline/demo_pipeline/jobs/: __init__.py  jobs_using_ops.py
dagster_workflow/demo-pipeline/demo_pipeline/resources/: __init__.py  hltv.py
dagster_workflow/demo-pipeline/demo_pipeline/utils/: dl_unzip.py  get_matches.py  scrape_match.py
dagster_workflow/demo-pipeline/demo_pipeline/utils/demo_parse/: go.mod  go.sum  parse_demo.go
download_and_unzip/: Dockerfile  dl_unzip.py  requirements.txt
download_manager/: Dockerfile
download_queue/: requirements.txt
get_demos/: Dockerfile  get_demos.py  requirements.txt
get_matches/: Dockerfile  get_demos.py  get_matches.py  requirements.txt  send_matches.py
ingest_demo/: Dockerfile  requirements.txt  requirments.txt
(+19 files in other folders)
